packages/errors/test/__snapshots__/CONFIG_FILE_NOT_FOUND.ansi
[31mCould not find a Cypress configuration file.[39m
[31m[39m
[31mWe looked but did not find a [33mcypress.config.js[39m[31m file in this folder: [94m/path/to/project/root[39m[31m[39m